cabal-version:         2.4

name:                  helpa
version:               0.4.0.1

synopsis:              HELPA - Heavenly Esoteric Little Portable Assembler to esoteric languages
description:           Please see the README on GitHub at <https://github.com/helvm/helpa#readme>
homepage:              https://helvm.github.io/helpa/
bug-reports:           https://github.com/helvm/helpa/issues

license:               Apache-2.0
license-file:          docs/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2021 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/helvm/helpa

flag ghcoptions
    description: compile with options
    manual     : True
    default    : False

common common-options
  build-depends:
      base                 <  4.16
    , relude               == 1.0.0.1
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--    -Wmissing-export-lists FIXME
      -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:
    HelVM.Common.Collections.MapList
    HelVM.Common.Collections.SList

    HelVM.Common.Containers.LLIndexSafe
    HelVM.Common.Containers.LLInsertDef
    HelVM.Common.Containers.MTIndexSafe
    HelVM.Common.Containers.MTInsertDef
    HelVM.Common.Containers.Util

    HelVM.Common.Digit.Digitable
    HelVM.Common.Digit.Digits
    HelVM.Common.Digit.ToDigit

    HelVM.Common.ListLikeUtil
    HelVM.Common.NamedValue
    HelVM.Common.ReadText
    HelVM.Common.Safe
    HelVM.Common.SequencesUtil
    HelVM.Common.Util

    HelVM.HelPA.Assembler.API
    HelVM.HelPA.Assembler.AsmParserUtil
    HelVM.HelPA.Assembler.IO.BusinessIO
    HelVM.HelPA.Assembler.Util
    HelVM.HelPA.Assembler.Value

    HelVM.HelPA.Assemblers.ASQ.API.QuestionMark
    HelVM.HelPA.Assemblers.ASQ.API.Separator
    HelVM.HelPA.Assemblers.ASQ.AsmParser
    HelVM.HelPA.Assemblers.ASQ.Assembler
    HelVM.HelPA.Assemblers.ASQ.AssemblyOptions
    HelVM.HelPA.Assemblers.ASQ.CodeGenerator
    HelVM.HelPA.Assemblers.ASQ.Instruction
    HelVM.HelPA.Assemblers.ASQ.Line
    HelVM.HelPA.Assemblers.ASQ.Linker
    HelVM.HelPA.Assemblers.ASQ.Reducer
    HelVM.HelPA.Assemblers.ASQ.Reducers.ExpressionReducer
    HelVM.HelPA.Assemblers.ASQ.Reducers.InstructionReducer
    HelVM.HelPA.Assemblers.ASQ.Reducers.ItemReducer
    HelVM.HelPA.Assemblers.ASQ.Reducers.LabelReducer
    HelVM.HelPA.Assemblers.ASQ.Reducers.QuestionMarkReducer

    HelVM.HelPA.Assemblers.EAS.AsmParser
    HelVM.HelPA.Assemblers.EAS.Assembler
    HelVM.HelPA.Assemblers.EAS.CodeGenerator
    HelVM.HelPA.Assemblers.EAS.Instruction
    HelVM.HelPA.Assemblers.EAS.Linker
    HelVM.HelPA.Assemblers.EAS.Reducer

    HelVM.HelPA.Assemblers.WSA.API.TokenType
    HelVM.HelPA.Assemblers.WSA.AsmParser
    HelVM.HelPA.Assemblers.WSA.Assembler
    HelVM.HelPA.Assemblers.WSA.AssemblyOptions
    HelVM.HelPA.Assemblers.WSA.CodeGenerator
    HelVM.HelPA.Assemblers.WSA.Instruction
    HelVM.HelPA.Assemblers.WSA.Linker
    HelVM.HelPA.Assemblers.WSA.Reducer
    HelVM.HelPA.Assemblers.WSA.Token
  build-depends:
      attoparsec
    , containers           == 0.6.2.1
    , data-default
    , dlist
    , ilist
    , ListLike
    , mono-traversable
    , mtl
    , pretty-simple
    , slist
    , split
    , type-operators
  ghc-options:

executable helpa
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
  build-depends:
      helpa
    , optparse-applicative >= 0.14.3.0
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helpa-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec

    HelVM.CartesianProduct
    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelPA.Assemblers.ASQ.AsmParserSpec
    HelVM.HelPA.Assemblers.ASQ.AssemblerSpec
    HelVM.HelPA.Assemblers.ASQ.FileUtil

    HelVM.HelPA.Assemblers.EAS.AsmParserSpec
    HelVM.HelPA.Assemblers.EAS.AssemblerSpec
    HelVM.HelPA.Assemblers.EAS.CodeGeneratorSpec
    HelVM.HelPA.Assemblers.EAS.FileUtil
    HelVM.HelPA.Assemblers.EAS.LinkerSpec
    HelVM.HelPA.Assemblers.EAS.TestData
    HelVM.HelPA.Assemblers.EAS.ReducerSpec

    HelVM.HelPA.Assemblers.WSA.AsmParserSpec
    HelVM.HelPA.Assemblers.WSA.AssemblerSpec
    HelVM.HelPA.Assemblers.WSA.AssemblyOptionsUtil
    HelVM.HelPA.Assemblers.WSA.CodeGeneratorSpec
    HelVM.HelPA.Assemblers.WSA.FileUtil
    HelVM.HelPA.Assemblers.WSA.LinkerSpec
    HelVM.HelPA.Assemblers.WSA.ReducerSpec
    HelVM.HelPA.Assemblers.WSA.TestData
  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow

    , helpa

    , filepath
--    , ilist
    , type-operators

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark helpa-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/benchmark
  main-is:             Main.hs
  build-depends:
      gauge
--    , helpa

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
