cabal-version:         2.4

name:                  helpa
version:               0.4.4.0

synopsis:              HELPA - Heavenly Esoteric Little Portable Assembler to esoteric languages
description:           Please see the README on GitHub at <https://github.com/helvm/helpa#readme>
homepage:              http://helvm.org/helpa/
bug-reports:           https://github.com/helvm/helpa/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2022 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.4.2

source-repository head
  type:                git
  location:            https://github.com/helvm/helpa

flag ghcoptions
  description:         compile with options
  manual:              True
  default:             False

common common-options
  build-depends:
      base                 <  4.17
    , relude               == 1.1.0.0
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--    -Wmissing-export-lists FIXME
      -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:
    HelVM.HelPA.Assembler.AsmParserExtra
    HelVM.HelPA.Assembler.Lexer
    HelVM.HelPA.Assembler.Extra
    HelVM.HelPA.Assembler.Value

    HelVM.HelPA.Assembler.API.Separator
    HelVM.HelPA.Assembler.API.SourcePath

    HelVM.HelPA.Assembler.IO.BusinessIO

    HelVM.HelPA.Assemblers.ASQ.API.AssemblyOptions
    HelVM.HelPA.Assemblers.ASQ.API.QuestionMark
    HelVM.HelPA.Assemblers.ASQ.API.Version

    HelVM.HelPA.Assemblers.ASQ.Assembler

    HelVM.HelPA.Assemblers.ASQ.Eigenratios.AsmParser
    HelVM.HelPA.Assemblers.ASQ.Eigenratios.Assembler
    HelVM.HelPA.Assemblers.ASQ.Eigenratios.Instruction
    HelVM.HelPA.Assemblers.ASQ.Eigenratios.Reducer

    HelVM.HelPA.Assemblers.ASQ.EsoLangs.AsmParser
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Assembler
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Instruction
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Line
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducer
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducers.ExpressionReducer
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducers.InstructionReducer
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducers.ItemReducer
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducers.LabelReducer
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.Reducers.QuestionMarkReducer

    HelVM.HelPA.Assemblers.ASQ.Util.AsmParser
    HelVM.HelPA.Assemblers.ASQ.Util.CodeGenerator

    HelVM.HelPA.Assemblers.EAS.AsmParser
    HelVM.HelPA.Assemblers.EAS.Assembler
    HelVM.HelPA.Assemblers.EAS.CodeGenerator
    HelVM.HelPA.Assemblers.EAS.Instruction
    HelVM.HelPA.Assemblers.EAS.Linker
    HelVM.HelPA.Assemblers.EAS.Reducer

    HelVM.HelPA.Assemblers.WSA.API.TokenType
    HelVM.HelPA.Assemblers.WSA.AsmParser
    HelVM.HelPA.Assemblers.WSA.Assembler
    HelVM.HelPA.Assemblers.WSA.AssemblyOptions
    HelVM.HelPA.Assemblers.WSA.CodeGenerator
    HelVM.HelPA.Assemblers.WSA.Instruction
    HelVM.HelPA.Assemblers.WSA.Linker
    HelVM.HelPA.Assemblers.WSA.Reducer
    HelVM.HelPA.Assemblers.WSA.Token
  build-depends:
      helio
    , attoparsec           <  0.14.4
    , containers           <  0.7
    , filepath
    , ListLike
    , split
    , type-operators
  ghc-options:

executable helpa
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
    Lang
  build-depends:
      helio
    , helpa
    , optparse-applicative >= 0.14.3.0
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helpa-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec

    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelPA.Assemblers.ASQ.AssemblyOptionsExtra
    HelVM.HelPA.Assemblers.ASQ.FileExtra

    HelVM.HelPA.Assemblers.ASQ.Eigenratios.AsmParserSpec
    HelVM.HelPA.Assemblers.ASQ.Eigenratios.AssemblerSpec

    HelVM.HelPA.Assemblers.ASQ.EsoLangs.AsmParserSpec
    HelVM.HelPA.Assemblers.ASQ.EsoLangs.AssemblerSpec

    HelVM.HelPA.Assemblers.EAS.AsmParserSpec
    HelVM.HelPA.Assemblers.EAS.AssemblerSpec
    HelVM.HelPA.Assemblers.EAS.CodeGeneratorSpec
    HelVM.HelPA.Assemblers.EAS.FileExtra
    HelVM.HelPA.Assemblers.EAS.LinkerSpec
    HelVM.HelPA.Assemblers.EAS.TestData
    HelVM.HelPA.Assemblers.EAS.ReducerSpec

    HelVM.HelPA.Assemblers.WSA.AsmParserSpec
    HelVM.HelPA.Assemblers.WSA.AssemblerSpec
    HelVM.HelPA.Assemblers.WSA.AssemblyOptionsExtra
    HelVM.HelPA.Assemblers.WSA.CodeGeneratorSpec
    HelVM.HelPA.Assemblers.WSA.FileExtra
    HelVM.HelPA.Assemblers.WSA.LinkerSpec
    HelVM.HelPA.Assemblers.WSA.ReducerSpec
    HelVM.HelPA.Assemblers.WSA.TestData
  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow

    , helio
    , helpa

    , filepath
    , type-operators

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark helpa-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/benchmark
  main-is:             Main.hs
  build-depends:
      gauge
--    , helpa

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
